--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 	      </div>
 	    </div>
 	  </nav>
+
+	  <!-- Landing page- Home section -->
 	  <section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
@@ -120,8 +122,8 @@
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">About</h1>
-		            <h2 class="mb-4">About Me</h2>
+		          	<h1 class="big big-2 text-md-left text-center">About Me</h1>
+		            <h2 class="mb-4 text-md-left text-center">About Me</h2>
 		            <p>Graduate in Data Science and Computer Engineering with hands-on experience in building scalable, 
 						cloud-integrated software systems. Skilled in full-stack development, backend engineering, and 
 						delivering data-driven solutions in collaborative, cross-functional teams. Adept at debugging,
@@ -218,7 +220,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/19lTaFZZEDMDcLWex5gpQIyWnX2Mtp_CO/view?usp=sharing" target="_blank" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1iElOPYRIughA5o6b-mSSQUsexvHs-1lc/view?usp=sharing" target="_blank" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -402,7 +404,7 @@
 						<p class="text-light mb-4" style="font-size: 18px;">
 							👩‍💻 <strong>Me</strong>: Absolutely. My CV’s got receipts.
 						</p>
-						<p><a href="https://drive.google.com/file/d/19lTaFZZEDMDcLWex5gpQIyWnX2Mtp_CO/view?usp=sharing" target="_blank" class="btn btn-primary py-4 px-5">Download CV</a></p>
+						<p><a href="https://drive.google.com/file/d/1iElOPYRIughA5o6b-mSSQUsexvHs-1lc/view?usp=sharing" target="_blank" class="btn btn-primary py-4 px-5">Download CV</a></p>
 					</div>	
 				</div>					
 			</div>
@@ -419,11 +421,22 @@
           </div>
         </div>
     		<div class="row">
+				<!-- for new projects- use this section -->
+				<div class="col-md-12">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="https://weather-frontend-4pj4.onrender.com/" target="_blank">AI Weather Forecasting App</a></h3>
+							<span>TensorFlow, Keras, Pandas, NumPy, FastAPI, Streamlit, Open-Meteo API, Render</span>
+						</div>
+					</div>
+	    		</div>
+
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://github.com/saadhanag13/Music-Generation-LSTM">LSTM model in Music Generation using Keras</a></h3>
+	    					<h3><a href="https://github.com/saadhanag13/Music-Generation-LSTM" target="_blank">LSTM model in Music Generation using Keras</a></h3>
 	    					<span>RNN, Keras, TensorFlow</span>
 	    				</div>
     				</div>
@@ -432,7 +445,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://github.com/saadhanag13/Deep-Learning-Based-Image-Classifier">Deep Learning Based Image Classifier</a></h3>
+	    					<h3><a href="https://github.com/saadhanag13/Deep-Learning-Based-Image-Classifier" target="_blank">Deep Learning Based Image Classifier</a></h3>
 	    					<span>CNN, TensorFlow, Keras</span>
 	    				</div>
     				</div>
@@ -442,7 +455,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://github.com/saadhanag13/Dimensionality-Reduction-Methods-in-Modern-Multivariate-Analysis">Dimensionality Reduction Methods in Modern Multivariate Analysis</a></h3>
+	    					<h3><a href="https://github.com/saadhanag13/Dimensionality-Reduction-Methods-in-Modern-Multivariate-Analysis" target="_blank">Dimensionality Reduction Methods in Modern Multivariate Analysis</a></h3>
 	    					<span>PCA, K-PCA, PCR</span>
 	    				</div>
     				</div>
@@ -450,7 +463,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://github.com/saadhanag13/Effect-of-economic-growth-on-health-using-Population-Indicator">Effect of economic growth on health using Population Indicator</a></h3>
+	    					<h3><a href="https://github.com/saadhanag13/Effect-of-economic-growth-on-health-using-Population-Indicator" target="_blank">Effect of economic growth on health using Population Indicator</a></h3>
 	    					<span>World Bank Open Data, Matplotlib, Seaborn, Scikit-learn</span>
 	    				</div>
     				</div>
@@ -461,7 +474,7 @@
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="https://github.com/saadhanag13/Sentiment_Analysis">Sentiment Analysis</a></h3>
+			    					<h3><a href="https://github.com/saadhanag13/Sentiment_Analysis" target="_blank">Sentiment Analysis</a></h3>
 			    					<span>BERT (Language Model), Text Classification, Hugging Face Transformers, PyTorch</span>
 			    				</div>
 		    				</div>
@@ -470,7 +483,7 @@
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="https://andhaadhirehab.in/">Andhaadhi Rehab</a></h3>
+			    					<h3><a href="https://andhaadhirehab.in/" target="_blank">Andhaadhi Rehab</a></h3>
 			    					<span>ReactJS, NodeJS, Tailwind CSS, Google Sheets</span>
 			    				</div>
 		    				</div>
