--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 						<dotlottie-wc src="https://lottie.host/f5c50d6d-ea86-41c4-ab3e-7ace5df3a88a/5pJ7mzvWkp.lottie" style="width: 150px; height: 150px" autoplay loop></dotlottie-wc>
 						<p class="mt-2">R</p>
 					</div>
-				
+					
 
 					<div class="col-6 col-md-2 mb-4 text-center">
 						<img src="images/icons/Firebase.png" style="width: 150px; height: 150px;" alt="Firebase" />
@@ -389,6 +389,11 @@
 					<div class="col-6 col-md-2 mb-4 text-center">
 						<dotlottie-wc src="https://lottie.host/04744f2b-d092-48de-b8b1-632635188c14/LlmtEPhUY4.lottie" style="width: 150px; height: 150px" autoplay loop></dotlottie-wc>
 						<p class="mt-2">Git</p>
+					</div>
+
+					<div class="col-6 col-md-2 mb-4 text-center">
+						<dotlottie-wc src="https://lottie.host/bc96bde4-11d2-48da-bf15-5539812445df/S7gSxOSb74.lottie" style="width: 150px; height: 150px" autoplay loop></dotlottie-wc>
+						<p class="mt-2">Docker</p>
 					</div>
 
 					<div class="col-6 col-md-2 mb-4 text-center">
